Integrated French Language

--- a/src/languages/french.json
+++ b/src/languages/french.json
@@ -24,7 +24,7 @@
     "SECURE PAYMENT": "PAIEMENT SÉCURISÉ",
     "100% secure payment":"Paiement 100% sécurisé",
     "Information": "Information",
-    "My Account": "My Account",
+    "My Account": "Mon compte",
     "Join Our Newsletter Now": "Rejoignez notre newsletter maintenant",
     "Get E-mail updates about our latest shop and special offers.": "Recevez des mises à jour par e-mail sur notre dernière boutique et nos offres spéciales.",
     "Address": "Adresse",
