--- a/src/languages/en.json
+++ b/src/languages/en.json
@@ -12,7 +12,7 @@
     "Women's": "Women's",
     "Kid's": "Kid's",
     "Deal Of The Week": "Deal Of The Week",
-    "You can now enjoy our mouthwatering offers & deals on Fashion a weekly basis": "You can now enjoy our mouthwatering offers & deals on Fashion a weekly basis",
+    "You can now enjoy our mouthwatering offers & deals on Fashion on a weekly basis": "You can now enjoy our mouthwatering offers & deals on Fashion on a weekly basis",
     "Discover More": "Discover More",
     "Cinnamon In The Look By Marie Claire": "Cinnamon In The Look By Marie Claire",
     "Revolutionising Nigeria's Fashion E-commerce by thisday style": "Revolutionising Nigeria's Fashion E-commerce by thisday style",
@@ -87,7 +87,7 @@
 "Apply": "Apply",
 "CONFIRM ORDER": "CONFIRM ORDER",
 "My Cinnamon Account": "My Cinnamon Account",
-"Addresss Book": "Addresss Book",
+"Address Book": "Address Book",
 "Log Out": "Log Out",
 "Account Overview": "Account Overview",
 "Account Details": "Account Details",
