--- a/src/languages/french.json
+++ b/src/languages/french.json
@@ -12,7 +12,7 @@
     "Women's": "aux femmes",
     "Kid's": "Enfants",
     "Deal Of The Week": "Offre de la semaine",
-    "You can now enjoy our mouthwatering offers & deals on Fashion a weekly basis": "Vous pouvez désormais profiter chaque semaine de nos offres et promotions alléchantes sur la mode.",
+    "You can now enjoy our mouthwatering offers & deals on Fashion on a weekly basis": "Vous pouvez désormais profiter chaque semaine de nos offres et promotions alléchantes sur la mode.",
     "Discover More": "Découvrir plus",
     "Cinnamon In The Look By Marie Claire": "Cannelle dans le look par Marie Claire",
     "Revolutionising Nigeria's Fashion E-commerce by thisday style": "Révolutionner le commerce électronique de la mode au Nigeria par le style thisday",
@@ -87,7 +87,7 @@
 "Apply": "Appliquer",
 "CONFIRM ORDER": "CONFIRMER LA COMMANDE",
 "My Cinnamon Account": "Mon compte cannelle",
-"Addresss Book": "Carnet d'adresses",
+"Address Book": "Carnet d'adresses",
 "Log Out": "Se déconnecter",
 "Account Overview": "Aperçu du compte",
 "Account Details": "Détails du compte",
