--- a/src/languages/german.json
+++ b/src/languages/german.json
@@ -20,7 +20,7 @@
    "FREE SHIPPING": "KOSTENLOSER VERSAND",
    "For all order over 99$": "Für alle Bestellungen über 99$",
    "DELIVERY ON TIME": "PÜNKTLICHE LIEFERUNG",
-   "If good have prolems": "Wenn das Gute Vorzüge hat",
+   "If good have problems": "Wenn das Gute Vorzüge hat",
    "SECURE PAYMENT": "SICHERE ZAHLUNG",
    "100% secure payment": "100% sichere Zahlung",
    "Information": "Information",
@@ -98,5 +98,6 @@
 "UPDATE CART": "WARENKORB AKTUALISIEREN",
 "IMAGE": "BILD",
 "PRODUCT NAME": "PRODUKTNAME",
-"Address Book": "Adressbuch"
+"Address Book": "Adressbuch",
+"From The Blog": "Von dem Blog"
 }
