--- a/src/languages/en.json
+++ b/src/languages/en.json
@@ -99,5 +99,16 @@
 "UPDATE CART": "UPDATE CART",
 "IMAGE": "IMAGE",
 "PRODUCT NAME": "PRODUCT NAME",
-"From The Blog": "From The Blog"
+"From The Blog": "From The Blog",
+"Edit Details": "Edit Details",
+"Confirm": "Confirm",
+"All Brands": "All Brands",
+"Add Brand": "Add Brand",
+"Add Category": "Add Category",
+"All Tags": "All Tags",
+"Add Tag": "Add Tag",
+"All Sizes": "All Sizes",
+"Add Size": "Add Size",
+"All Products": "All Products",
+"Add Product": "Add Product"
 }
