--- a/src/languages/german.json
+++ b/src/languages/german.json
@@ -99,5 +99,16 @@
 "IMAGE": "BILD",
 "PRODUCT NAME": "PRODUKTNAME",
 "Address Book": "Adressbuch",
-"From The Blog": "Von dem Blog"
+"From The Blog": "Von dem Blog",
+"Edit Details":"Details bearbeiten",
+"Confirm": "Bestätigen",
+"All Brands": "Alle Marken",
+"Add Brand": "Marke hinzufügen",
+"Add Category": "Kategorie hinzufügen",
+"All Tags": "Alle Tags",
+"Add Tag": "Tag hinzufügen",
+"All Sizes": "Alle Größen",
+"Add Size": "Größe hinzufügen",
+"All Productss": "Alle Produkte",
+"Add Products": "Produkt hinzufügen"
 }
