--- a/src/languages/spanish.json
+++ b/src/languages/spanish.json
@@ -99,5 +99,16 @@
 "UPDATE CART": "ACTUALIZACIÓN DE LA COMPRA",
 "IMAGE": "IMAGEN",
 "PRODUCT NAME": "NOMBRE DEL PRODUCTO",
-"From The Blog": "desde el blog"
+"From The Blog": "desde el blog",
+"Edit Details": "Editar detalles",
+"Confirm": "Confirmar",
+"All Brands": "Todas las marcas",
+"Add Brand": "Agregar marca",
+"Add Category": "añadir categoría",
+"All Tags": "Todas las etiquetas",
+"Add Tag": "Agregar etiquetas",
+"All Sizes": "Todos los tamaños",
+"Add Size": "Agregar tamaño",
+"All Products": "Todos los productos",
+"Add Product": "Agregar producto"
 }
