Bespoke section form

--- a/src/languages/en.json
+++ b/src/languages/en.json
@@ -78,7 +78,7 @@
 "DELIVERY DETAILS": "DELIVERY DETAILS",
 "PAYMENT METHOD": "PAYMENT METHOD",
 "SAVE UP TO": "SAVE UP TO",
-"By switching to a pickup station starting from": "By switching to a pickup station starting from",
+"Get A free delivery for shopping via the website": "Get A free delivery for shopping via the website",
 "You will be redirected to our secure checkout page": "You will be redirected to our secure checkout page",
 "Order Summary": "Order Summary",
 "Item's total": "Item's total",
@@ -110,5 +110,6 @@
 "All Sizes": "All Sizes",
 "Add Size": "Add Size",
 "All Products": "All Products",
-"Add Product": "Add Product"
+"Add Product": "Add Product",
+"Currencies": "Currencies"
 }
